--- a/src/app/parteger/generic-table/generic-table.component.html
+++ b/src/app/parteger/generic-table/generic-table.component.html
@@ -124,7 +124,7 @@ dataKey="id"
         <div class="flex">
             <i
             *ngIf="option[1] == 'R' "
-
+                routerLink="../details/{{item.id}}"
                 class="pi pi-eye icon mr-3"
                 style="font-size: 1.5rem"
             ></i>
