--- a/src/app/administration/personnes/details-personnes/details-personnes.component.html
+++ b/src/app/administration/personnes/details-personnes/details-personnes.component.html
@@ -133,6 +133,42 @@
                         </div>
                     </p-tabPanel>
                     <p-tabPanel header="Informations Sur les vulnérabilités">
+                      <div class="card">
+                        <p-table [value]="personne.avoirvulnerabilites"
+                        [paginator]="true"
+                        [rows]="5"
+                        [showCurrentPageReport]="true"
+                        [tableStyle]="{ 'min-width': '50rem' }"
+                        currentPageReportTemplate="Affiche de {first} à {last} sur {totalRecords} entrée"
+                        [rowsPerPageOptions]="[5, 10, 20]"
+                        
+                        >
+                          <ng-template pTemplate="caption">
+                            <div class="flex align-items-center justify-content-between">
+                             <p>
+                              Liste de mes vulnerabilités
+                             </p>
+                    
+                            </div>
+                          </ng-template>
+                          <ng-template pTemplate="header">
+                            <tr>
+                              <th>Noms</th>
+                              <th>Description</th>
+                    
+                            </tr>
+                          </ng-template>
+                          <ng-template pTemplate="body" let-data>
+                            <tr>
+                              <td>{{data.vulnerabilite.nom}}</td>
+
+                              <td>{{data.vulnerabilite.description}}</td>
+
+                            </tr>
+                          </ng-template>
+                    
+                        </p-table>
+                      </div>
                     </p-tabPanel>
 
                     <p-tabPanel header="Informations Supplémentaires">
