--- a/src/app/account/login/app.login.component.html
+++ b/src/app/account/login/app.login.component.html
@@ -1,11 +1,14 @@
 <div class="login-body "
-    style="background-image: url(../../../../assets/manage.png);background-repeat: no-repeat;background-position: center;background-size: cover; ">
+    style="background-image: url(../../../../assets/demo/ban.jpg);background-repeat: no-repeat;background-position: center;background-size: cover; ">
     <div style="width: 100%;height: 100%;background-color: #00ccff4d !important;display: flex;align-items: center;">
         <div class="login-panel"
             style="width: 350px;text-align: start; padding: 0px !important;border-radius: 15px !important;background-color: transparent !important;">
             <p-card>
-           
-                <form [formGroup]="userInfo" (submit)="login()">
+                <div class="col-12 flex text-align-center justify-content-center align-items-center align-content-center" style="background:linear-gradient(to top, #235a8c, #0e3f6a);color: white;font-weight: bolder;border-top-left-radius: 15px;border-top-right-radius: 15px;">
+                    <h3>Groupp App</h3>
+                </div>
+                <form [formGroup]="userInfo" class="p-2" (submit)="login()">
+
                     <div class="p-col-12">
                         <div class="input-wrapper input-field"
                             [class.error]="username.invalid && username.hasError('required','type')">
