updates personne details vulnerabilité

--- a/src/app/administration/dashboard/dashboard.component.html
+++ b/src/app/administration/dashboard/dashboard.component.html
@@ -1,56 +1,76 @@
 <app-dashoard-skeleton *ngIf="load"></app-dashoard-skeleton>
 <div class="layout-dashboard" *ngIf="!load">
     <div class="grid">
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="overview-box users">
-                <img class="pi pi-home" style="font-size: 50px;" src="" alt="">
 
-                <div class="overview-title">Nombre de Personnes</div>
-                <div class="overview-numbers">
-                    {{states?.nbrePersonne || 0}}
-                </div>
-                <div class="overview-subinfo user">
-              
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="overview-box checkins">
-                <img class="pi pi-user" style="font-size: 50px;" src="" alt="">
-                <div class="overview-title">Nombre De Quartiers</div>
-                <div class="overview-numbers">
-                    {{states?.nbreQuartiers || 0}}
-                </div>
-                <div class="overview-subinfo user">
-                 
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="overview-box users3">
-                <img class="pi pi-users" style="font-size: 50px;" src="" alt="">
-                <div class="overview-title">Nombre de Commune</div>
-                <div class="overview-numbers">
-                    {{states?.nbreCommune || 0}}
-                </div>
-                <div class="overview-subinfo user">
-                  
-                </div>
-            </div>
-        </div>
-        <div class="col-12 md:col-6 lg:col-3">
-            <div class="overview-box users1">
-                <img class="pi pi-user-plus" style="font-size: 50px;" src="" alt="">
-                <div class="overview-title">Nombre de vulnerabilité </div>
-                <div class="overview-numbers">
-                    {{states?.nbreVulnerabilite || 0 }}
-                </div>
-                <div class="overview-subinfo checkin">
   
-                </div>
-            </div>
-        </div>
+                <div class="col-12 md:col-6 lg:col-3">
+                    <div class="surface-card shadow-2 p-3 border-round">
+                        <div class="flex justify-content-between mb-3">
+                            <div>
+                                <span class="block  mb-3" style="color: #235a8c !important;font-weight: bolder;">Nombre de Personne</span>
+                                <div class="text-900 font-medium text-xl">
 
+                                    {{states?.nbrePersonne || 0}}
+                                </div>
+                            </div>
+                            <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem;background: linear-gradient(to right, #235a8c, #0e3f6a);">
+                                <i class="pi pi-user  text-xl" style="color: white;"></i>
+                            </div>
+                        </div>
+            
+                    </div>
+                </div>
+                <div class="col-12 md:col-6 lg:col-3">
+                    <div class="surface-card shadow-2 p-3 border-round">
+                        <div class="flex justify-content-between mb-3">
+                            <div>
+                                <span class="block  mb-3" style="color: #235a8c !important;font-weight: bolder;">Nombre De Quartiers</span>
+                                <div class="text-900 font-medium text-xl">
+                                    {{states?.nbreQuartiers || 0}}
+
+                                </div>
+                            </div>
+                            <div class="flex align-items-center justify-content-center border-round" style="width:2.5rem;height:2.5rem;background: linear-gradient(to right, #235a8c, #0e3f6a);">
+                                <i class="pi pi-map-marker  text-xl" style="color: white;"></i>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-12 md:col-6 lg:col-3">
+                    <div class="surface-card shadow-2 p-3 border-round">
+                        <div class="flex justify-content-between mb-3">
+                            <div>
+                                <span class="block  mb-3" style="color: #235a8c !important;font-weight: bolder;">Nombre de Commune
+                                </span>
+                                <div class="text-900 font-medium text-xl">
+                                    {{states?.nbreCommune || 0}}
+   
+                                </div>
+                            </div>
+                            <div class="flex align-items-center justify-content-center border-round" style="width:2.5rem;height:2.5rem;background: linear-gradient(to right, #235a8c, #0e3f6a);">
+                                <i class="pi pi-inbox  text-xl" style="color: white;"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 md:col-6 lg:col-3">
+                    <div class="surface-card shadow-2 p-3 border-round">
+                        <div class="flex justify-content-between mb-3">
+                            <div>
+                                <span class="block  mb-3" style="color: #235a8c !important;font-weight: bolder;">Nombre de vulnerabilité</span>
+                                <div class="text-900 font-medium text-xl">
+                                    {{states?.nbreVulnerabilite || 0 }}
+
+                                </div>
+                            </div>
+                            <div class="flex align-items-center justify-content-center border-round" style="width:2.5rem;height:2.5rem; background: linear-gradient(to right, #235a8c, #0e3f6a);">
+                                <i class="pi pi-comment text-xl" style="color: white;"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+      
 
 
     
@@ -86,7 +106,16 @@
     </div>
             </p-panel>
         </div>
-   
+        <div class="col-12 md:col-12 lg:col-12 xl:col-6">
+            <p-panel header="Statistique des Personne Par vulnerabilité" styleClass="global-sales">
+                <div class="col-12 flex justify-content-center">
+            <div class="col-fluid">
+                <p-chart type="pie" [data]="vulnerability" [options]="options"></p-chart>
+
+            </div>
+    </div>
+            </p-panel>
+        </div>
 
     </div>
 </div>
