--- a/src/app/administration/quartiers/details-quartiers/details-quartiers.component.html
+++ b/src/app/administration/quartiers/details-quartiers/details-quartiers.component.html
@@ -40,7 +40,7 @@
         </section>
 
         <section *ngIf="hasResidences == false">
-           <h4>Aucune Résidence dans ce quartier</h4->
+           <h4>Aucune Résidence dans ce quartier</h4>
         </section>
     </div>
 
