--- a/src/app/app.breadcrumb.component.html
+++ b/src/app/app.breadcrumb.component.html
@@ -2,7 +2,7 @@
     <div class="route-bar-breadcrumb">
         <ul>
             <li>
-                <a routerLink="">
+                <a routerLink="/administration">
                     <i class="pi pi-home"></i>
                 </a>
             </li>
