--- a/src/app/app.topbar.component.html
+++ b/src/app/app.topbar.component.html
@@ -28,8 +28,8 @@
         </li>
     </ul>
 
-    <a href="#" id="right-panel-button" [ngClass]="{'menu-button-rotate': app.rightPanelActive}" (click)="app.onRightPanelButtonClick($event)">
+    <!-- <a href="#" id="right-panel-button" [ngClass]="{'menu-button-rotate': app.rightPanelActive}" (click)="app.onRightPanelButtonClick($event)">
         <i class="pi pi-angle-double-left"></i>
-    </a>
+    </a> -->
 
 </div>
