--- a/src/app/administration/personnes/list-personnes/list-personnes.component.html
+++ b/src/app/administration/personnes/list-personnes/list-personnes.component.html
@@ -4,17 +4,19 @@
     <div class="col-12">
         <app-skelleton *ngIf="load" [table]="['Noms', 'Prenoms', 'Date de Naissance', 'Region', 'Genre']" title="Liste Des Personnes"></app-skelleton>
 
-        <div *ngIf="!load">
+        <div *ngIf="!load" class="card border-round-2xl">
 
 
                 <div class="col flex justify-content-between align-items-center">
-                    <div>
+                    <div class="justify-content-center flex align-items-center">
+                        <i class="pi pi-fw pi-users" style="font-size: xxx-large;color: #0e3f6a;"></i>
+
                         <h3 style="
                     font-weight: bold;
-                    color: #222b45;
+                    color: #0e3f6a;
                     white-space: nowrap !important;
                 ">
-                            {{ titlePage }}
+                                           {{ titlePage }}
                         </h3>
                     </div>
                     <div class="flex align-content-center align-items-center">
@@ -56,6 +58,8 @@
                                                 <input pInputText type="text" class="input" style="
                                                 width: 100% !important;
                                                 border-radius: 20px !important;
+                                                border-color: cornflowerblue;
+
                                                 min-height: 48px !important;
                                             " (input)="onGlobalFilter(dt, $event)" placeholder="Rechercher..."
                                                     class="w-full sm:w-auto" />
@@ -70,6 +74,7 @@
                                                 tooltipPosition="bottom" style="
                                             font-size: 1.5rem;
                                             cursor: pointer;
+
                                             margin-right: 13px;
                                             color: #757575;
                                         "></i>
