--- a/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
+++ b/src/app/administration/quartiers/list-quartiers/list-quartiers.component.html
@@ -2,18 +2,20 @@
     <div class="col-12">
         <app-skelleton *ngIf="load" [table]="['Libellé', 'Commune', 'Créé le', 'Mise à jour le']"
         title="Liste des Quartiers"></app-skelleton>
-        <div *ngIf="!load">
+        <div *ngIf="!load" class="card border-round-2xl">
 
 
 
             <div class="col flex justify-content-between align-items-center">
-                <div>
+                <div class="justify-content-center flex align-items-center">
+                    <i class="pi pi-fw pi-table" style="font-size: xxx-large;color: #0e3f6a;"></i>
+
                     <h3 style="
-                    font-weight: bold;
-                    color: #222b45;
-                    white-space: nowrap !important;
-                ">
-                        {{ titlePage }}
+                font-weight: bold;
+                color: #0e3f6a;
+                white-space: nowrap !important;
+            ">
+                                       {{ titlePage }}
                     </h3>
                 </div>
                 <div class="flex align-content-center align-items-center">
@@ -53,6 +55,7 @@
                                         <input pInputText type="text" class="input" style="
                                                 width: 100% !important;
                                                 border-radius: 20px !important;
+                                                border-color: cornflowerblue;
                                                 min-height: 48px !important;
                                             " (input)="onGlobalFilter(dt, $event)" placeholder="Rechercher..."
                                             class="w-full sm:w-auto" />
